CICO-39757 updated the input box border

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -83,6 +83,16 @@ a:hover,
     border: 1px solid black !important;
 }
 
+.input-field {
+    border: 1px solid black !important;
+    background-color: #fff !important;
+    box-shadow: none !important;
+}
+
+.select-style, text-comment {
+    border: 1px solid black !important;
+}
+
 .dual-button {
     font-size: 22px;
     font-weight: 900;
@@ -289,7 +299,8 @@ a:hover,
 }
 
 .time {
-    font-size: 65px;
+    font-size: 20px;
+    padding-top: 25px;
     display: block;
 }
 
