--- a/guestweb/common_templates/partials/public_ny_v2/gwExternalCheckin.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwExternalCheckin.html
@@ -38,7 +38,7 @@
                     <p class="pull-left sub-text margin-top-10">CONFIRMATION NUMBER</p>
                     <input type="text" class="input-field padding-2" ng-model="confirmationNumber"></input>
                     <br/>
-                    <p class="sub-text margin-top-10">OR</p>
+                    <p class="sub-text margin-top-10 text-left">OR</p>
                     <!-- Departure date -->
                     <p class="pull-left sub-text margin-top-10">DEPARTURE DATE</p>
                     <input class="input-field padding-2 calendar-button" ng-click="showCalender()" ng-model="departureDate" placeholder="{{dateFormatPlaceholder}}" readonly></input>
