--- a/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
@@ -50,11 +50,11 @@
                         <div class="circle-bg">
                             <text x="40%" y="65%" fill="white">
                                 <tspan class="time">
-                                    {{ charge.time | number }}
+                                    {{ charge.time | number }} {{ charge.ap }}
                                 </tspan>
-                                <tspan class="ap">
+                                <!-- <tspan class="ap">
                                      {{ charge.ap }}
-                                </tspan>
+                                </tspan> -->
                             </text>
                         </div>
                     </div>
