CICO-34977 fixed the issues mentioned by QA

--- a/guestweb/common_css/historic_taos_inn/theme.less
+++ b/guestweb/common_css/historic_taos_inn/theme.less
@@ -67,8 +67,9 @@ a:hover,
 
 .btn,
 .btn:hover {
-    background: #404040;
+    background: #000;
     color: @white;
+    box-shadow: none !important;
 }
 
 .dual-button {
@@ -84,7 +85,7 @@ a:hover,
 
 .dark-button,
 .dark-button:hover {
-    background: #404040;
+    background: #000;
 }
 
 .light-button,
@@ -133,15 +134,15 @@ a:hover,
 }
 
 .upgrade-details .upgrades-btn {
-    background: #404040;
+    background: #000;
 }
 
 .proceed-to-checkin {
-    background: #3D3D3B;
+    background: #000;
 }
 
 .upgrades-label {
-    color: #BA7A55;
+    color: #fff;
 }
 
 
@@ -203,6 +204,11 @@ a:hover,
     background-color: #404040;
 }
 
+.calendar-button{
+    background-position: 96% 12px !important; 
+}
+
+
 .calendar-back {
     background-image: url('/assets/guestweb/common_images/back_icon.png');
 }
@@ -249,7 +255,7 @@ a:hover,
 }
 
 .back-to-checkout {
-    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
+    background: url(/assets/guestweb/common_images/left_arrow.png) center top no-repeat;
     height: 40px;
 }
 
@@ -295,6 +301,9 @@ a:hover,
     }
     .section-container {
         padding-bottom: 0px;
+    }
+    .calendar-button{
+        background-position: 96% 15px !important; 
     }
 }
 
