CICO-38993: File format selection

--- a/rover/partials/reports/scheduleReport/rvScheduleReport.html
+++ b/rover/partials/reports/scheduleReport/rvScheduleReport.html
@@ -98,9 +98,9 @@
                 </div>
             </div>
             <div class="entry">
-                <label for="time-period">FILE FORMAT</label>
+                <label for="file-format">File Format</label>
                 <div class="select">
-                    <select iscroll-stop-propagation  ng-model="scheduleParams.format_id" ng-options="format.id as format.value for format in schedule_formats">
+                    <select iscroll-stop-propagation  ng-model="scheduleParams.format_id" ng-options="format.id as format.value for format in scheduleFormat">
                        <option value="" >File Format</option>
                     </select>
                 </div>
