Fix in CICO-38994

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -19,7 +19,7 @@
                  otherwise show rate type name
             -->
             <span ng-show="selectedRateTypesFromRTT.length === 0">All Rate Types</span> 
-            <span ng-show="selectedRateTypesFromRTT.length > 1">1 Rate Type</span>
+            <span ng-show="selectedRateTypesFromRTT.length === 1">1 Rate Type</span>
             <span ng-show="selectedRateTypesFromRTT.length > 1">{{selectedRateTypesFromRTT.length}} Rate Types</span>
         </li>
         
