--- a/guestweb/common_templates/partials/public_ny_v2/gwLateCheckoutfinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLateCheckoutfinal.html
@@ -31,10 +31,10 @@
         <!-- left side -->
         <div class="col-md-4 top-spacing">
             
-            <p class="sub-main-text">Thank you for purchasing Late Check-out.
+            <p class="sub-main-text text-left">Thank you for purchasing Late Check-out.
 	        </p>
 	       
-           <p class="sub-main-text">
+           <p class="sub-main-text text-left">
             <em>Your room keys are set to expire at {{oldCheckoutTime}}. Please see a Public Advisor to re-activate your keys for the late checkout time selected. </em>
            </p>
         </div>
