--- a/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
@@ -29,7 +29,7 @@
     <div class="row" ng-hide="isFetching || netWorkError">
         <div class="col-md-1"></div>
         <div class="col-md-4 top-spacing mob-margin-top--1">
-            <p class="main-text mob-margin-bottom-3">Want to upgrade?</p>
+            <p class="main-text mob-margin-bottom-3 text-left">Want to upgrade?</p>
             
         </div>
         <div class="col-md-2"><div class="vertical-line vertical-line-long">&nbsp;</div></div>
@@ -68,7 +68,7 @@
                 </carousel>
                 <br/>
                 <div ng-click="noThanksClicked()" class="proceed-to-checkin">
-                    <div class="white-arrow"></div>
+                    
                     <span>NO, THANKS. PROCEED TO <strong>CHECK IN</strong></span>
                 </div>
             </div>
