--- a/guestweb/common_templates/partials/public_ny_v2/gwRoomVerification.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwRoomVerification.html
@@ -44,7 +44,7 @@
             <div class="section-container">
                 <p class="sub-text pull-left">Room Number</p>
                 <input class="input-field padding-3" ng-model="roomNumber"></input>
-                <a class="btn btn-template margin-top-20"  ng-click="continueButtonClicked()"> Continue</a>    
+                <a class="btn btn-template margin-top-20"  ng-click="continueButtonClicked()"> NEXT</a>    
             </div>
         </div>
         <div class="col-md-1">
