--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -10,16 +10,16 @@
         <div class="col-md-1"></div>
         <div class="col-md-5 top-spacing res-date-container">
            <!--  -->
-            <p class="sub-text light-text mob-margin-bottom-3">RESERVATION #{{confirmationNumber}}</p>
-            <p class="main-text mob-margin-bottom-3" ng-hide="ShowupgradedLabel">
+            <p class="sub-text light-text mob-margin-bottom-3 text-left">RESERVATION #{{confirmationNumber}}</p>
+            <p class="main-text mob-margin-bottom-3 text-left" ng-hide="ShowupgradedLabel">
                 Your Stay
             </p>
-            <p class="main-text mob-margin-bottom-3" ng-show="ShowupgradedLabel">
+            <p class="main-text mob-margin-bottom-3 text-left" ng-show="ShowupgradedLabel">
                 Your New Stay
             </p>
             <div class="margin-top-10 mob-margin-top-3 mob-padding-bottom-3 bottom-border">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-6 text-left">
                         <div class="res-details-heading">
                             ARRIVAL DATE
                         </div>
@@ -27,7 +27,7 @@
                             {{reservationData.arrival_date}}
                         </div>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-xs-6 text-left">
                         <div class="res-details-heading">
                             DEPARTURE DATE
                         </div>
@@ -101,7 +101,7 @@
         </div>
          <div class="col-md-3 lonely-btn">
              <center>
-                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()"> Continue</a>
+                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()"> NEXT</a>
              </center>
         </div>
         <div class="col-md-1">
