--- a/guestweb/common_templates/partials/public_ny_v2/gwLateArrivalTime.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLateArrivalTime.html
@@ -75,7 +75,7 @@
                 </div> -->
             </div>
              <!--  submit button-->
-            <a class="btn btn-template margin-top-10" ng-click="postStayDetails()">Continue</a>
+            <a class="btn btn-template margin-top-10" ng-click="postStayDetails()">NEXT</a>
         </div>
         <div class="col-md-1">
         </div>                   
