--- a/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
@@ -40,7 +40,7 @@
         <div class="col-md-2"></div>
         <!-- left side -->
         <div class="col-md-4 top-spacing">
-            <p class="main-text">Please choose your new<br>check out time:</p>
+            <p class="main-text text-left">Please choose your new<br>check out time:</p>
         </div>
        <!-- right side -->
         <div class="col-md-5 top-spacing mob-no-padding">
