--- a/guestweb/common_templates/partials/public_ny_v2/gwNewCheckinFinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwNewCheckinFinal.html
@@ -23,18 +23,22 @@
             <p class="error-text">Our apologies, something went wrong, please complete your check-in at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}"class="phone-text">{{hotelPhone}}.</a></p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
+    <!-- main content -->
     <div class="row" ng-hide="isPosting || netWorkError">
         <div class="col-md-1"></div>
-        <div class="col-md-4 top-spacing section-container">
-            <p class="main-text"> Early Check-in</p>
-            <p class="sub-main-text"> Thank you for purchasing <b>Early Check-in</b>.
-            </p>
+        <!-- left side -->
+        <div class="col-md-4 top-spacing">
+            <p class="main-text final-text text-left">You're checked in!</p>
+            <p class="sub-text text-left">Reservation #:{{confirmationNumber}}</p>
         </div>
+        <div class="horizontal-line-sep-mobile"></div>
+        <!-- right side -->
         <div class="col-md-2"><div class="vertical-line">&nbsp;</div></div>
-        <div class="col-md-4 top-spacing sm-no-top-spacing section-container">
-            <a class="btn btn-template margin-top-10" ng-click="nextButtonClicked()">NEXT</a>
+        <div class="col-md-3 text-left top-spacing sm-no-top-spacing">
+             <p class="sub-main-text text-left">{{responseData.delivery_message}}
+             </p>
         </div>
         <div class="col-md-1">
         </div>                   
