CICO-39757 updated the alignments and label changes

--- a/guestweb/common_templates/partials/public_ny_v2/gwExternal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwExternal.html
@@ -24,7 +24,7 @@
         </div>                   
     </div>
 </div>
-<div class="container" ng-hide="isLoading || netWorkError">
+<div class="container" ng-hide="isLoading || netWorkError || calendarView">
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6 top-spacing sm-no-top-spacing">
