--- a/guestweb/common_templates/partials/public_ny_v2/gwExternalCheckin.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwExternalCheckin.html
@@ -21,7 +21,7 @@
         <div class="col-md-2">
         </div>
     </div>
-    <div class="row" ng-hide="isLoading || netWorkError || !searchMode">
+    <div class="row" ng-hide="isLoading || netWorkError || !searchMode || isCalender">
         <div class="col-md-3"></div>
         <div class="col-md-6 top-spacing sm-no-top-spacing">
             <!-- default main text -->
