CICO-39757 fixing style issues

--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-5 top-spacing res-date-container">
+        <div class="col-md-5 top-spacing res-date-container margin-top-20">
            <!--  -->
             <p class="sub-text light-text mob-margin-bottom-3">RESERVATION #{{confirmationNumber}}</p>
             <p class="main-text mob-margin-bottom-3" ng-hide="ShowupgradedLabel">
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="res-details-heading">
-                            ARRIVAL DATE
+                            ARRIVAL
                         </div>
                         <div class="res-date">
                             {{reservationData.arrival_date}}
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-xs-6">
                         <div class="res-details-heading">
-                            DEPARTURE DATE
+                            DEPARTURE
                         </div>
                         <div class="res-date">
                          {{reservationData.departure_date}}
