--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -164,7 +164,10 @@ a:hover,
 }
 
 .proceed-to-checkin {
-    background: #3D3D3B;
+    background: #fff;
+    color: #000;
+    border: 1px solid black !important;
+    border-radius: 0px;
 }
 
 .upgrades-label {
