--- a/guestweb/common_templates/partials/public_ny_v2/gwArrivalTime.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwArrivalTime.html
@@ -35,7 +35,7 @@
         <div class="col-md-2"><div class="vertical-line vertical-line-long">&nbsp;</div></div>
         <div class="col-md-4 top-spacing sm-no-top-spacing section-container mob-padding-bottom-10">
              <!--  -->
-            <div class="section-container mob-padding-bottom-10">
+            <div class="section-container mob-padding-bottom-10 text-left">
                 <p class="sub-text text-left">ESTIMATED ARRIVAL TIME</p>
                 <span ng-show="showHotelTime" class="sub-main-text">(Please select an arrival time. Your arrival time options are displayed in the hotel’s local time. It is currently  {{hotelTime}} in the hotel’s local time.)</span></p>
                 <br/><br/>
