--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -101,7 +101,7 @@
         </div>
          <div class="col-md-3 lonely-btn">
              <center>
-                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()"> Continue</a>
+                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()">NEXT</a>
              </center>
         </div>
         <div class="col-md-1">
