CICO-39757 fixing public ny styles

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -61,6 +61,7 @@ a:hover,
 .logo-image {
     max-width: 100%;
     margin: 0%;
+    margin-bottom:15px;
 }
 
 .template-text,
@@ -432,11 +433,15 @@ a:hover,
     .checkout-btn {
         padding: 25% 2% !important;
     }
+    .logo-image {
+        margin-bottom:20px;
+    }
 }
 
 @media (max-width: 990px) {
     .logo-image {
         margin: 0px;
+        margin-bottom:15px;
         // max-width: 295px;
     }
     .back-to-checkout {
