--- a/guestweb/common_templates/partials/public_ny_v2/gwNewPrecheckinFinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwNewPrecheckinFinal.html
@@ -28,7 +28,7 @@
     <div class="row" ng-hide="isLoading || netWorkError">
         <div class="col-md-4"></div>
         <!-- left side -->
-        <div class="col-md-4 top-spacing no-side-padding">
+        <div class="col-md-4 top-spacing">
             <p class="main-text final-text">CHECK-IN COMPLETE</p>
             <p class="sub-text">Reservation #:{{confirmationNumber}}</p>
             <br/><br/>
