CICO-39757 fixing public ny styles

--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-5 top-spacing res-date-container margin-top-40">
+        <div class="col-md-5 top-spacing margin-top-40">
            <!--  -->
             <p class="sub-text light-text mob-margin-bottom-3">RESERVATION #{{confirmationNumber}}</p>
             <p class="main-text mob-margin-bottom-3" ng-hide="ShowupgradedLabel">
