CICO-39757 adding bg color for calendar

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -289,7 +289,7 @@ a:hover,
 }
 
 .date-picker-bg {
-    background: unset;
+    background: rgba(238, 238, 238, 0.58);
 }
 
 .horizontal-line-sep-mobile {
