Revert "CICO-39772 fixed the text edits"

--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row margin-top-10 mob-margin-top-3" ng-hide="ShowupgradedLabel">
+            <div class="row margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
                     <div class="res-details-heading">
                         AVERAGE RATE PER NIGHT
