--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
@@ -51,7 +51,7 @@
                                            {{currencySymbol}}{{slide.upsell_amount | number:2 }}
                                        </span>
                                        <p class="rate-desc">
-                                        EXTRA<br>PER NIGHT PLUS TAX
+                                        EXTRA<br>PER NIGHT
                                     </p>
                                 </div>
                             </div>
