--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-             <div class="row margin-top-10 mob-margin-top-3" ng-show="isAddonUpsellActive && reservationData.addons_data.length > 0 ">
+             <div class="row margin-top-10 mob-margin-top-3" ng-if="isAddonUpsellActive && reservationData.addons_data.length > 0 ">
                 <div class="col-xs-12 left-align">
                     <div class="res-details-heading">
                         ENHANCEMENTS
@@ -99,7 +99,7 @@
         <div class="col-md-2 top-spacing">
         	<div class="vertical-line vertical-line-long">&nbsp;</div>
         </div>
-         <div class="col-md-3 lonely-btn">
+         <div class="col-md-3 lonely-btn margin-top-20">
              <center>
                  <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()">NEXT</a>
              </center>
