CICO-34978 fixing accept charges button issue

--- a/guestweb/common_css/historic_taos_inn/theme.less
+++ b/guestweb/common_css/historic_taos_inn/theme.less
@@ -305,6 +305,9 @@ a:hover,
     .calendar-button{
         background-position: 96% 15px !important; 
     }
+    .accept-charges {
+        width: 300px;
+    }
 }
 
 .btn-template {
