--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -210,6 +210,10 @@ a:hover,
     transform: scale(1.5);
 }
 
+.early-checkin-button{
+    font-size: 16px !important;
+}
+
 /*----------------- date picker -------------------------*/
 
 .pickadate-cell,
