--- a/guestweb/common_templates/partials/public_ny_v2/gwEarlyCheckinOptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwEarlyCheckinOptions.html
@@ -14,7 +14,7 @@
 	        </p>
         </div>
         <div class="col-md-2"><div class="vertical-line">&nbsp;</div><div class="horizontal-line">&nbsp;</div></div>
-        <div class="col-md-4 top-spacing sm-no-top-spacing section-container no-side-padding">
+        <div class="col-md-4 top-spacing sm-no-top-spacing section-container">
              <a class="btn btn-template early-checkin-button margin-top-10" ng-click="nextButtonClicked()"> Purchase Early Check-in</a>
              <a class="btn btn-template early-checkin-button margin-top-10 grey-btn" ng-click="changeArrivalTime()"> Change Arrival Time</a>
         </div>
