CICO-40348 Changed the unset value of fee in charge codes to empty string instead of “null” If value is unset, UI would be sending empty string against the selected_fees_code key

--- a/admin/partials/chargeCodes/adChargeCodeDetailsForm.html
+++ b/admin/partials/chargeCodes/adChargeCodeDetailsForm.html
@@ -45,7 +45,7 @@
 					</label>
 					<div class="select">
 						<select convert-to-number name="payment-type" ng-model="prefetchData.selected_fees_code">
-							<option value="null">Select Fees</option>
+							<option value="">Select Fees</option>
 							<option value="{{feesCode.value}}" ng-selected="feesCode.value == prefetchData.selected_fees_code" ng-repeat="feesCode in prefetchData.fees_codes">
 							{{feesCode.name}} {{feesCode.description}}
 							</option>
