CICO-39214 - Style update

--- a/stylesheets/less/app/screens/04.cards.less
+++ b/stylesheets/less/app/screens/04.cards.less
@@ -2517,7 +2517,7 @@
                                 }
 
                                 &.commission {
-                                    width: 335px;
+                                    .calc-width( 100, 250 );
                                     padding-left: 20px; 
                                     border-left: 1px solid rgba(0,0,0,0.1);
                                     height: 100%;
