CICO-38760 fixes some minor bugs, electron and hotel admin zest station general area

--- a/login/partials/stationLogin.html
+++ b/login/partials/stationLogin.html
@@ -19,7 +19,7 @@
 		</ul>	
 	</span>
 
-	<form style='margin-top:-35px;' accept-charset="UTF-8" ng-submit="submit()" autocomplete="off" class="form" id="login-form" method="post" name="login-form" novalidate>
+	<form accept-charset="UTF-8" ng-submit="submit()" autocomplete="off" class="form" id="login-form" method="post" name="login-form" novalidate>
 		<input name="utf8" type="hidden" value="" />
 		<input name="authenticity_token" type="hidden" value="" />
 
